--- a/HousePrices/BuildingModel.ipynb
+++ b/HousePrices/BuildingModel.ipynb
@@ -11,11 +11,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "#from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "\n",
-    "from sklearn.linear_model import LassoCV"
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
